refactor WorkoutExerciseMapper to use Stream.toList() for improved readability